Introduced AwbThemeColor